# curve-fitter

./: README.md  pyproject.toml
src/curve_fitter/: __init__.py
src/curve_fitter/monomial/: base.py
